<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".patient.PatientProfile"
    android:background="#fafafa"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/colorPrimaryDarktheme"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/patientProfile_profileImageview"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="80dp"
                android:layout_height="80dp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textAllCaps="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:textColor="#ffff"
                android:textSize="@dimen/primaryText"
                android:textStyle="bold"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="400dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp"
            android:layout_marginStart="20dp"
            android:elevation="5dp"
            app:cardCornerRadius="10dp"
            android:layout_marginEnd="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/patientid"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/textHeading"
                        android:textSize="@dimen/primaryText"/>

                    <TextView
                        android:id="@+id/patient_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/empty"
                        android:textSize="@dimen/secondaryText"
                        android:textStyle="bold"
                        android:paddingTop="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/textHeading"
                        android:textSize="@dimen/primaryText"/>

                    <TextView
                        android:id="@+id/gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/empty"
                        android:textSize="@dimen/secondaryText"
                        android:textStyle="bold"
                        android:paddingTop="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="@color/textHeading"
                        android:textSize="@dimen/primaryText"/>

                    <TextView
                        android:id="@+id/age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="36 Years 40 Months 5 Days"
                        android:textSize="@dimen/secondaryText"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:paddingTop="10dp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp">

   <LinearLayout
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:weightSum="2">

       <TextView
           android:layout_width="0dp"
           android:layout_weight="0.7"
           android:layout_height="wrap_content"
           android:text="@string/email"
           android:layout_marginLeft="5dp"
           android:layout_marginRight="10dp"
           android:textColor="@color/textHeading"
           android:textStyle="bold" />

       <TextView
           android:id="@+id/email"
           android:layout_width="0dp"
           android:layout_weight="1.3"
           android:layout_height="wrap_content"
           android:text="@string/empty"/>
   </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_weight="0.7"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/textHeading"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:layout_height="wrap_content"
            android:text="@string/empty"/>
    </LinearLayout>



    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_weight="0.7"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/textHeading"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:layout_height="wrap_content"
            android:text="@string/empty"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/maritial_status"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.7"
            android:layout_marginRight="10dp"
            android:textColor="@color/textHeading"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/marital_status"
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:layout_height="wrap_content"
            android:text="@string/empty"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/guardian"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.7"
            android:layout_marginRight="10dp"
            android:textColor="@color/textHeading"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/guardian_name"
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:layout_height="wrap_content"
            android:text="@string/empty"/>
    </LinearLayout>

</LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

